--- a/WebStudy03_MVC/src/main/webapp/WEB-INF/web.xml
+++ b/WebStudy03_MVC/src/main/webapp/WEB-INF/web.xml
@@ -3,37 +3,76 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
-	<display-name>WebStudy02_MVN</display-name>
+	<display-name>WebStudy03_MVC</display-name>
 	<welcome-file-list>
 		<welcome-file>index.do</welcome-file>
 	</welcome-file-list>
 	
-   <filter>
-      <filter-name>AuthenticationFilter</filter-name>
-      <filter-class>kr.or.ddit.auth.AuthenticationFilter</filter-class>
-      <init-param>
-         <param-name>filePath</param-name>
-         <param-value>/kr/or/ddit/SecuredResources.properties</param-value>
-      </init-param>
-   </filter>
-   <filter-mapping>
-      <filter-name>AuthenticationFilter</filter-name>
-      <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   <filter>
-      <filter-name>AuthorizationFilter</filter-name>
-      <filter-class>kr.or.ddit.auth.AuthorizationFilter</filter-class>
-   </filter>
-   <filter-mapping>
-      <filter-name>AuthorizationFilter</filter-name>
-      <url-pattern>/*</url-pattern>
-   </filter-mapping>
+	<filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>kr.or.ddit.mvc.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forced</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>GeneratePrincipalFilter</filter-name>
+		<filter-class>kr.or.ddit.auth.GeneratePrincipalFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>GeneratePrincipalFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+<!-- 	<filter> -->
+<!-- 	   <filter-name>AuthenticationFilter</filter-name> -->
+<!-- 	   <filter-class>kr.or.ddit.auth.AuthenticationFilter</filter-class> -->
+<!-- 	   <init-param> -->
+<!-- 	      <param-name>filePath</param-name> -->
+<!-- 	      <param-value>/kr/or/ddit/SecuredResources.properties</param-value> -->
+<!-- 	   </init-param> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 	   <filter-name>AuthenticationFilter</filter-name> -->
+<!-- 	   <url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
+<!-- 	<filter> -->
+<!-- 	   <filter-name>AuthorizationFilter</filter-name> -->
+<!-- 	   <filter-class>kr.or.ddit.auth.AuthorizationFilter</filter-class> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 	   <filter-name>AuthorizationFilter</filter-name> -->
+<!-- 	   <url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
+	<filter>
+		<filter-name>MultipartFilter</filter-name>
+		<filter-class>kr.or.ddit.mvc.multipart.MultipartFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MultipartFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 	<servlet>
 		<servlet-name>frontController</servlet-name>
 		<servlet-class>kr.or.ddit.mvc.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
+		<!--  -->
+		<multipart-config>
+			<!-- 파일이 큰 경우 임시 저장소 위치 -->
+			<location>D:/filetemp</location>
+		</multipart-config>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>frontController</servlet-name>
 		<url-pattern>*.do</url-pattern>
